style.css
/* ... */
.navbar-collapse {
	display: flex;
	justify-content: center;
	width: 100%;
}

.navbar-nav {
	display: flex;
	justify-content: center;
	align-items: center;
	width: 100%;
}

.navbar .nav-item {
	margin-left: 1rem;
	margin-right: 1rem;
}

/* Style the header */
.header {
	background-color: #0e121a;
	color: rgb(255, 255, 255);
	padding: 20px;
	text-align: center;
	/* box-shadow: 0 0 5px black; */
}

/* Style the search bar */
#search-bar {
	width: 100%;
	padding: 12px 20px;
	margin: 8px 0;
	box-sizing: border-box;
	border: 3px solid #ccc;
	border-radius: 4px;
	background-color: #f8f8f8;
	font-family: 'beaufort_for_lolbold';
	font-size: 16px;
  }
  
  @media (min-width: 768px) {
	#search-bar {
	  width: 50%;
	}
  }

/* Style the champion grid */
.champion-grid {
	display: grid;
	grid-template-columns: repeat(7, 1fr);
	grid-auto-rows: 100px;
	transition: all 0.3s ease-in-out;
	padding: 1rem;
	margin: 1rem;
	border: 1px solid #343541;
	border-radius: 5px;
	box-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
	background-color: rgba(0, 0, 0, 0.8);
	overflow: hidden;
}

.champion-tile {
	height: max-content;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	text-align: center;
	color: #d1ccb5;
	grid-row: span 2;
	grid-column: span 1;
	transition: all 0.3s ease-in-out;
}

.champion-tile img {
	margin-top: 2rem;
	width: 80px;
	height: 80px;
}

.hidden {
	opacity: 0;
	transform: translateY(-20px) translateX(-200%);
	transition: all 0.3s ease-in-out;
	pointer-events: none;
}

.champion-stats-container {
	border: 1px solid #ccc;
	border-radius: 10px;
	box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
	overflow: hidden;
	background-color: #fff;
	position: absolute;
	justify-content: center;
	align-items: center;
	text-align: center;
	display: block;
	opacity: 0;
	animation: fadeIn 0.3s ease-in-out forwards;
}

@keyframes fadeIn {
	from {
		opacity: 0;
		transform: translateY(0%);
	}
	to {
		opacity: 1;
		transform: translateY(-10px);
	}
}

.champion-stats-container img {
	display: flex;
	justify-content: center;
	align-items: center;
	text-align: center;
	height: 200px;
	width: auto;
	filter: brightness(0.5);
}

.champion-stats {
	position: relative;
}

.champion-stats-text {
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	color: white;
	font-size: 24px;
	-webkit-text-stroke: 0.5px black;
}

.green-text {
	color: #00FF7F;
}

.red-text {
	color: #FF6347;
}

.champion-stats-grid {
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	grid-template-rows: auto;
	grid-gap: 10px;
}

.champion-stats-text {
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	grid-template-rows: repeat(2, auto);
	gap: 5px;
	align-items: center;
	justify-items: center;

}

.win-rate-item {
	grid-column: 2;
	grid-row: 1;
	text-align: center;
}

.damage-dealt-item {
	grid-column: 1;
	grid-row: 2;
}

.damage-taken-item {
	grid-column: 3;
	grid-row: 2;
}

/* Team */
/* .team {
	margin: 75px 0;
}

.team h1 {
	text-align: center;
	font-weight: bold;
	font-family: 'beaufort_for_lolbold';
	padding-bottom: 10px;
}
.team h1::after {
	content: '';
	background: #333;
	display: block;
	height: 3px;
	width: 150px;
	margin: 10px auto;
} */

.about {
	padding-top: 5rem;
	color: white;
}

/* .padding {
	padding-bottom: 2rem;
	padding-left: 1rem;
	padding-right: 1rem;
} */

.card {
	min-width: 20rem;
	min-height: 25rem;
	max-width: 30rem;
	max-height: 35rem;
	font-family: 'beaufort_for_lolbold';
}

.card-imd-top {
	max-width: 100px;
}

.card-title {
	text-align: center;
}

/* Intro */
.intro {
	position: fixed;
	z-index: 1000;
	left: 0;
	top: 0;
	width: 100%;
	height: 100vh;
	background-color: #161616;
	transition: 1s;
}

.logo-header {
	position: absolute;
	font-size: 7vw;
	top: 40%;
	left: 50%;
	margin: 0;
	padding: 0;
	font-family: 'beaufort_for_lolbold';
	letter-spacing: 2px;
	-webkit-text-fill-color: transparent;
	-webkit-text-stroke-width: 2px;
	color: #d1ccb5;
	transform: translate(-50%, -50%);
}

.logo {
	position: relative;
	display: inline-block;
	bottom: -70px;
	opacity: 0;
}

.logo.active {
	bottom: 0;
	opacity: 1;
	transition: ease-in-out 0.5s;
}

.logo.fade {
	bottom: 70px;
	opacity: 0;
	transition: ease-in-out 0.5s;
}



/* Parallax */
.parallax {
	height: 100%;
	min-height: 700px;
	width: 100%;
	position: relative;
	justify-content: center;
	align-items: center;
	overflow: hidden;
	transition: opacity 0.5s ease-out;
}

.parallax img {
	height: auto;
	width: 100%;
	max-width: 100%;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	position: absolute;
	display: block;
	object-fit: cover;
}


.parallax h1 {
    display: block;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, 150%);
    font-size: 5vw;
    font-family: 'beaufort_for_lolbold';
    letter-spacing: 2px;
    -webkit-text-fill-color: transparent;
    -webkit-text-stroke-width: 2px;
	white-space: nowrap;
    color: #d1ccb5;
}

#ashe {
	height: 100%;
	object-position: top center;
	mask-image: linear-gradient(to top, transparent 1%, rgba(0, 0, 0, 1));
	-webkit-mask-image: linear-gradient(to top, transparent 1%, rgba(0, 0, 0, 1));
}


#lol {
	position: absolute;
	width: 50%;
	max-width: 500px;
	left: 50%;
	top: 50%;
	transform: translate(-50%, -50%);
  }
/* ... */

